src/test/ui/feature-gates/feature-gate-main.rs
#[main]
fn foo() {} //~ ERROR: declaration of a non-standard `#[main]` function may change over time
